Fix positioning of @-mentions interface on mobile devices.
Props r-a-y.
Fixes #7928.

git-svn-id: https://buddypress.svn.wordpress.org/trunk@12289 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/src/bp-activity/css/mentions-rtl.css
+++ b/src/bp-activity/css/mentions-rtl.css
@@ -88,7 +88,6 @@
 
 	.atwho-view {
 		border-radius: 0;
-		height: 100%;
 		right: 0 !important;
 		width: 100%;
 	}
