--- a/src/bp-activity/css/mentions.css
+++ b/src/bp-activity/css/mentions.css
@@ -90,7 +90,6 @@
 
 	.atwho-view {
 		border-radius: 0;
-		height: 100%;
 		left: 0 !important;
 		width: 100%;
 	}
